Fix #109822: Average Brush in Vertex Paint Mode is broken

Caused by 7a943428de7b

Looking at history, e.g. 575ade22d4de or prior, it seems the
"fallthrough" [related compiler warning was removed in 7a943428de7b] was
actually intended in the case of `VPAINT_TOOL_AVERAGE`.

So first, the average color is calculated and after that regular drawing
should happen with that color.

Now make this more clear by calling both `calculate_average_color` as
well as `vpaint_do_draw` before breaking.

Pull Request: https://projects.blender.org/blender/blender/pulls/109971