source/blender/editors/sculpt_paint/paint_vertex.cc
@@ -3686,6 +3686,7 @@ static void vpaint_paint_leaves(bContext *C,
   switch ((eBrushVertexPaintTool)brush->vertexpaint_tool) {
     case VPAINT_TOOL_AVERAGE:
       calculate_average_color<Color, Traits, domain>(vpd, ob, me, brush, lcol, nodes, totnode);
+      vpaint_do_draw<Color, Traits, domain>(C, sd, vp, vpd, ob, me, nodes, totnode, lcol);
       break;
     case VPAINT_TOOL_DRAW:
       vpaint_do_draw<Color, Traits, domain>(C, sd, vp, vpd, ob, me, nodes, totnode, lcol);
